# mpv-easy

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  biome.json  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.base.json  tsconfig.build.json
.github/: download.js
.github/workflows/: build-artifacts.yml  ci.yml  release.yml
assets/changelog/: 0.1.12.md  0.1.13.md  0.1.15.md
blog/: Introduction-to-MPV-Shaders.md  Revolutionizing-mpv-Scripting-A-New-Package-Format-Proposal.md  Running-v8-v7-Benchmarks-in-mpv-Player.md  customize-your-own-mpv-right-from-your-browser.md  how-to-share-video-subtitles.md  index.md  make-video-clips-with-mpv-easy.md  maybe-the-simplest-way-to-install-mpv.md  mount-any-playable-link.md  mpv-easy-piano-Can-You-Guess-the-Song.md  mpv-quick-start.md  the-easiest-way-to-use-anime4k-in-mpv.md
mpv-anime/: package.json  readme.md
mpv-anime/src/: easings.ts  index.tsx  spring.ts
mpv-anime4k/: anime4k.conf  build.ts  package.json  readme.md  tsconfig.json
mpv-anime4k/meta/: anime4k.meta.js  build.ts
mpv-anime4k/shaders/: AMD_FSR_EASU_luma.glsl  AMD_FSR_EASU_rgb.glsl  AMD_FSR_rgb.glsl  SSimDownscaler.glsl  adaptive_sharpen.glsl  adaptive_sharpen_luma.glsl  nlmeans_dx.glsl  nnedi3_nns128_win8x4.glsl  nnedi3_nns128_win8x6.glsl
mpv-anime4k/src/: anime4k.ts  index.ts  shaders.ts  type.d.ts
mpv-assdraw/: package.json  readme.md
mpv-assdraw/src/: index.ts
mpv-assdraw/test/: basic.test.ts
mpv-autoload/: build.ts  mpv-autoload.conf  package.json  readme.md
mpv-autoload/meta/: autoload.meta.js  build.ts  mpv-autoload.meta.js
mpv-autoload/src/: autoload.ts  index.ts  mpv-autoload.ts
mpv-boa/: .gitignore  Cargo.toml  package.json
mpv-boa/src/: lib.rs  ops.rs  run.rs
mpv-build/: README.md  index.html  meta.json  package.json  tsconfig.json  vite.config.ts
mpv-build/meta/: Audio WebDAV & Sub WebDAV.meta.js  Botflix_stream-cli.meta.js  BoxToWide.meta.js  Change-OSD-Media-Title.meta.js  DLNAmpvRenderer.meta.js  Harmonoid.meta.js  InputEvent.meta.js  KDialog-open-files.meta.js  KikoPlay.meta.js  List chapters.meta.js  LoadDanmaku.meta.js  M-x.meta.js  Macast.meta.js  ModernX cyl0.meta.js  ModernX zydezu.meta.js  ModernZ.meta.js  Olivia.meta.js  Open Sound Control.meta.js  Plaincast.meta.js  Pure.meta.js  Serkio Tagger.meta.js  SimpleBookmark-1.0.meta.js  SimpleHistory-1.0.meta.js  SimpleUndo-3.2.meta.js  SmartCopyPaste-3.0.meta.js  SmartCopyPaste-II-3.0.meta.js  SmartSkip.meta.js  Sockets.meta.js  Sofalizer.meta.js  Stremio.meta.js  Syncplay.meta.js  Tcl_Tk context-menu.meta.js  TubiTui.meta.js  UndoRedo.meta.js  Yomichampv.meta.js  abs-screenshot.meta.js  acestream.meta.js  acompressor.meta.js  adevice-list.meta.js  afilter.meta.js  (+404 more)
mpv-build/public/: logo.bgra
mpv-canvas/: index.html  package.json  readme.md  tsconfig.build.json  tsconfig.json
mpv-clearurls/: package.json  readme.md
mpv-clip-play/: package.json  readme.md
mpv-clipboard-play/: build.ts  clipboard-play.conf  package.json  readme.md
mpv-console/: package.json  tsconfig.build.json
mpv-copy-screen/: build.ts  copy-screen.conf  package.json  readme.md  tsconfig.json
mpv-copy-time/: .gitignore  build.ts  copy-time.conf  package.json  readme.md
mpv-crop/: build.ts  mpv-crop.conf  package.json  readme.md
mpv-cut/: build.ts  mpv-cut.conf  package.json  readme.md
mpv-deno/: Cargo.toml  package.json  readme.md
mpv-deno-init/: .gitignore  package.json  readme.md
mpv-deno/src/: api.rs  lib.rs  mp_deno.rs  ops.rs  run.rs
mpv-deno/src/bindgen/: client.rs
mpv-deno/src/client_dyn/: ffi.rs  format.rs  lib.rs  mod.rs
mpv-easy/: install.md  mpv-easy.meta.js  package.json  readme.md  tsconfig.build.json
mpv-easy-client/: Cargo.toml  package.json
mpv-easy-client/src/: api.rs  lib.rs  mpv.rs
mpv-easy-client/src/bindgen/: client.rs
mpv-easy-client/src/client_dyn/: common.rs  error.rs  ffi.rs  format.rs  lib.rs  mod.rs
mpv-easy-ext/: Cargo.toml  Cross.toml  package.json  readme.md
mpv-easy-ext/src/: common.rs  error.rs  lib.rs
mpv-easy-ext/src/cmd/: cli.rs  clipboard.rs  completion.rs  fetch.rs  fs.rs  img.rs  jellyfin.rs  mod.rs  webdav.rs  wget.rs
mpv-easy-ext/src/cmd/clip/: clip_mac.rs  clip_win.rs
mpv-easy-react/: build.ts  install.md  package.json  readme.md  tsconfig.build.json  tsconfig.json
mpv-easy-solid/: build.ts  package.json  readme.md  tsconfig.build.json  tsconfig.json
mpv-easy-tpl/: .gitignore  .stackblitzrc  build.ts  package.json  readme.md
mpv-flex/: package.json  readme.md
mpv-frame-seeker/: package.json  readme.md
mpv-hook/: package.json  tsconfig.build.json
mpv-i18n/: package.json  readme.md
mpv-jellyfin/: package.json  readme.md
mpv-js-plugin-init/: .npmrc  package.json  tsconfig.build.json  tsconfig.json
mpv-m3u/: package.json  readme.md
mpv-mock/: package.json  tsconfig.build.json
mpv-mount/: README.md  package.json
mpv-mpsm/: .gitignore  package.json  readme.md  tsconfig.build.json  tsconfig.json
mpv-play-with/: package.json  readme.md  tsconfig.build.json  tsconfig.json
mpv-playground/: README.md  index.html  package.json  rsbuild.config.ts  tsconfig.json  vite.config.ts
mpv-plugin/: package.json  tsconfig.json
mpv-polyfill/: package.json  readme.md  tsconfig.json
mpv-qjs/: Cargo.toml  package.json
mpv-qjs/src/: ops.rs  run.rs
mpv-react/: package.json
mpv-remote/: README.md  index.html  package.json  vite.config.ts
mpv-rs-ext/: Cargo.toml  package.json
mpv-rs-ext/src/: main.rs
mpv-rs-ext/src/cmd/: clipboard.rs  completion.rs
mpv-rs-ext/src/cmd/clip/: clip_android.rs  clip_win.rs  mod.rs
mpv-solid/: package.json  tsconfig.build.json  tsconfig.json
mpv-sponsorblock/: README.md  package.json
mpv-thumbfast/: build.ts  package.json  readme.md  thumbfast.conf  tsconfig.build.json  tsconfig.json
mpv-tool/: package.json  readme.md  tsconfig.build.json
mpv-translate/: build.ts  mpv-translate.conf  package.json  readme.md
mpv-ui/: package.json  readme.md
mpv-youtube/: README.md  package.json
patches/: jotai@2.9.3.patch
(+732 files in other folders)
