[workspace]
members = [
  "mpv-deno",
  "mpv-qjs",
  "mpv-easy-client",
  # "mpv-boa",
  "mpv-easy-ext",
]
resolver = "2"

[workspace.dependencies]
rquickjs = { version = "0.8.1"  }
once_cell = "1.20.2"
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
deno_core = "0.326.0"
mpv-easy-client = { path = "./mpv-easy-client" }
libloading= "0.8.6"
flate2 = "1.0.35"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["wrap_help", "derive"] }
clap_complete = "4.5.40"
anyhow = "1.0.94"
color-eyre = "0.6.3"
petgraph = { version = "0.6.5", features = ["serde", "serde-1"] }
crossbeam = "0.8.4"
tokio = { version = "1.42.0", features = ["full"] }
colored = "2.2.0"
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde-xml-rs = "0.6.0"
webdav-serde = "0.1.1"
image = "0.25.5"
rand = "0.8.5"
glob = "0.3.1"
serde-jellyfin = { version = "0.1" }
serde-m3u = { version = "0.1" }
clipboard-rs = "0.2.2"
openssl = { version = "0.10.68", features = ["vendored"] }
