[workspace]
members = [
  # "mpv-deno",
  # "mpv-qjs",
  # "mpv-easy-client",
  # "mpv-boa",
  "mpv-easy-ext",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mpv-easy/mpv-easy"
homepage = "https://github.com/mpv-easy/mpv-easy"
authors = ["ahaoboy"]

[workspace.dependencies]
rquickjs = { version = "0.9" }
once_cell = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# deno_core = "0.340"
mpv-easy-client = { path = "./mpv-easy-client" }
libloading = "0.8"
flate2 = "1"
base64 = "0.22"
clap = { version = "4", features = ["wrap_help", "derive"] }
clap_complete = "4"
anyhow = "1"
color-eyre = "0.6"
# petgraph = { version = "0.7", features = ["serde", "serde-1"] }
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
enum_dispatch = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde-xml-rs = "0.6"
webdav-serde = "0.1"
image = "0.25"
rand = "0.9"
glob = "0.3"
serde-jellyfin = { version = "0.1" }
serde-m3u = { version = "0.1", git = "https://github.com/ahaoboy/serde-m3u" }
clipboard-rs = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = { version = "2" }
