[package]
name = "mpv-boa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "mpv_boa"
crate-type = ["cdylib"]

[dependencies]
time = "0.3.36"
boa_engine = "0.18.0"
boa_parser = "0.18.0"
once_cell = "1.3.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mpv-easy-client = { path = "../mpv-easy-client" }
