[package]
name = "mpv-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "mpv_deno"
crate-type = ["cdylib"]

[dependencies]
# mpv-client = "0.6.0"
mpv-easy-client = { path = "../mpv-easy-client" }
deno = "1.41.0"
deno_core = "0.264.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [profile.release]
# debug = false
# lto = true
# strip = true
# opt-level = "s"
# codegen-units = 1
