[package]
name = "mpv-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "mpv_deno"
crate-type = ["cdylib"]

[dependencies]
mpv-easy-client = { path = "../mpv-easy-client" }
deno_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
