[package]
name = "mpv-easy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# mpv-client = "0.6.0"
libloading= "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.3.1"

# [profile.release]
# debug = false
# lto = true
# strip = true
# opt-level = "s"
# codegen-units = 1