[package]
name = "mpv-easy-ext"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ahaoboy"]
repository = "https://github.com/mpv-easy/mpv-easy"
description = "mpv-easy rust extension"

[dependencies]
flate2 = "1.0"
base64 = "0.22"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["wrap_help", "derive"] }
clap_complete = "4"
anyhow = "1.0.79"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.2"
petgraph = { version = "*", features = ["serde", "serde-1"] }
crossbeam = "0.8.4"
tokio = { version = "1.36.0", features = ["full"] }
colored = "2.1.0"
once_cell = "1.19.0"
enum_dispatch = "0.3.12"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde-xml-rs = "0.6.0"
webdav-serde = "0.1.1"
image = "0.25.1"
rand = "0.8.5"
glob = "0.3.1"
serde-jellyfin= { version = "0.1"}
temp-dir = "0.1.13"

[target.'cfg(not(target_os = "android"))'.dependencies]
clipboard-rs = "0.1.7"
