[package]
name = "mpv-easy-ext"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ahaoboy"]
repository = "https://github.com/mpv-easy/mpv-easy"
description = "mpv-easy rust extension"

[dependencies]
flate2 = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
petgraph = { workspace = true }
crossbeam = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
enum_dispatch = { workspace = true }
reqwest = { workspace = true }
serde-xml-rs = { workspace = true }
webdav-serde = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
glob = { workspace = true }
serde-jellyfin = { workspace = true }
serde-m3u = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
clipboard-rs = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { workspace = true }
