[package]
name = "mpv-qjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "mpv_qjs"
crate-type = ["cdylib"]

[dependencies]
rquickjs = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mpv-easy-client = { workspace = true }
