[package]
name = "mpv-rs-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rs-ext"
path="./src/main.rs"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["wrap_help", "derive"] }
clap_complete = "4"
anyhow = "1.0.79"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.2"
petgraph = { version = "*", features = ["serde","serde-1"] }
crossbeam = "0.8.4"
tokio = { version = "1.36.0", features = ["full"] }
colored = "2.1.0"
once_cell = "1.19.0"
enum_dispatch = "0.3.12"
reqwest = { version = "0.11", features = ["json"] }
serde-xml-rs = "0.6.0"
webdav-serde = "0.1.1"
image = "0.24.8"
rand = "0.8.5"
glob = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.1.0"
